Final Deliverables/Customer care registry/kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  customer-care-registry-service
spec:
  type: NodePort
  ports:
    - port: 5000
  selector:
    app:  customer-care-registry
